tests/dataset/tpc-h/compiler/cpp/q10.error
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:376:27: error: no match for ‘operator==’ (operand types are ‘Result’ and ‘Result’)
  376 |               if (__g.key == __key) {
      |                   ~~~~~~~ ^~ ~~~~~
      |                       |      |
      |                       Result Result
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:397:26: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  397 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                        ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67,
                 from /usr/include/c++/13/algorithm:60,
                 from /tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:2:
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:397:56: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  397 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                        ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:397:56: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  397 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                        ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:397:26: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  397 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                        ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:397:56: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  397 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                        ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:397:56: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  397 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                        ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:397:70: error: template argument 1 is invalid
  397 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                                      ^
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:397:70: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:400:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  400 |                    __items.push_back(
      |                            ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:401:51: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  401 |                        (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                 ~ ^ ~~~~~~~~~~~~~~
      |                                                 |       |
      |                                                 int     std::any
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:401:57: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  401 |                        (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                         ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:401:57: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  401 |                        (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                         ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:393:80:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:393:54: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  393 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:393:65: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  393 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                               ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:410:32: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  410 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                              ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:410:62: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  410 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:410:62: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  410 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:410:32: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  410 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                              ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:410:62: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  410 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:410:62: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  410 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:410:76: error: template argument 1 is invalid
  410 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                                            ^
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:410:76: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:413:34: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  413 |                          __items.push_back(
      |                                  ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:414:57: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  414 |                              (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                       ~ ^ ~~~~~~~~~~~~~~
      |                                                       |       |
      |                                                       int     std::any
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:414:63: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  414 |                              (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                               ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:414:63: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  414 |                              (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                               ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:407:24:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:406:49: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  406 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:406:60: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  406 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                          ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:392:24: error: no matching function for call to ‘std::vector<std::pair<double, __struct8> >::push_back(<brace-enclosed initializer list>)’
  392 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  393 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  394 |                ([&]() {
      |                ~~~~~~~~ 
  395 |                  std::vector<decltype((
      |                  ~~~~~~~~~~~~~~~~~~~~~~
  396 |                      std::declval<__struct6>().l.l_extendedprice *
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  397 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  398 |                      __items;
      |                      ~~~~~~~~
  399 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  400 |                    __items.push_back(
      |                    ~~~~~~~~~~~~~~~~~~
  401 |                        (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  402 |                  }
      |                  ~      
  403 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  404 |                })())),
      |                ~~~~~~~  
  405 |            __struct8{g.key.c_custkey, g.key.c_name, ([&](auto v) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  406 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  407 |                      })(([&]() {
      |                      ~~~~~~~~~~~
  408 |                        std::vector<decltype((
      |                        ~~~~~~~~~~~~~~~~~~~~~~
  409 |                            std::declval<__struct6>().l.l_extendedprice *
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  410 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  411 |                            __items;
      |                            ~~~~~~~~
  412 |                        for (auto x : g.items) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  413 |                          __items.push_back(
      |                          ~~~~~~~~~~~~~~~~~~
  414 |                              (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  415 |                        }
      |                        ~
  416 |                        return __items;
      |                        ~~~~~~~~~~~~~~~
  417 |                      })()),
      |                      ~~~~~~
  418 |                      g.key.c_acctbal, g.key.n_name, g.key.c_address,
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  419 |                      g.key.c_phone, g.key.c_comment}});
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:10:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<double, __struct8>; _Alloc = std::allocator<std::pair<double, __struct8> >; value_type = std::pair<double, __struct8>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<double, __struct8> >::value_type&’ {aka ‘const std::pair<double, __struct8>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<double, __struct8>; _Alloc = std::allocator<std::pair<double, __struct8> >; value_type = std::pair<double, __struct8>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<double, __struct8> >::value_type&&’ {aka ‘std::pair<double, __struct8>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCHQueriesq10565593198/001/prog.cpp:427:5: error: conversion from ‘vector<__struct8>’ to non-scalar type ‘vector<__struct6>’ requested
  355 |   std::vector<__struct6> result = ([&]() {
      |                                   ~~~~~~~~
  356 |     std::vector<__struct7> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  357 |     for (auto c : customer) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~
  358 |       for (auto o : orders) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~
  359 |         if (!((o.o_custkey == c.c_custkey)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  360 |           continue;
      |           ~~~~~~~~~
  361 |         for (auto l : lineitem) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~
  362 |           if (!((l.l_orderkey == o.o_orderkey)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  363 |             continue;
      |             ~~~~~~~~~
  364 |           for (auto n : nation) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~
  365 |             if (!((n.n_nationkey == c.c_nationkey)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  366 |               continue;
      |               ~~~~~~~~~
  367 |             if (!((((o.o_orderdate >= start_date) &&
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  368 |                     (o.o_orderdate < end_date)) &&
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  369 |                    (l.l_returnflag == std::string("R")))))
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  370 |               continue;
      |               ~~~~~~~~~
  371 |             auto __key =
      |             ~~~~~~~~~~~~
  372 |                 Result{c.c_custkey, c.c_name,    c.c_acctbal, c.c_address,
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  373 |                        c.c_phone,   c.c_comment, n.n_name};
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  374 |             bool __found = false;
      |             ~~~~~~~~~~~~~~~~~~~~~
  375 |             for (auto &__g : __groups) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  376 |               if (__g.key == __key) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  377 |                 __g.items.push_back(__struct6{c, o, l, n});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  378 |                 __found = true;
      |                 ~~~~~~~~~~~~~~~
  379 |                 break;
      |                 ~~~~~~
  380 |               }
      |               ~
  381 |             }
      |             ~
  382 |             if (!__found) {
      |             ~~~~~~~~~~~~~~~
  383 |               __groups.push_back(__struct7{
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  384 |                   __key, std::vector<__struct6>{__struct6{c, o, l, n}}});
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  385 |             }
      |             ~
  386 |           }
      |           ~
  387 |         }
      |         ~
  388 |       }
      |       ~
  389 |     }
      |     ~
  390 |     std::vector<std::pair<double, __struct8>> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  391 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  392 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  393 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  394 |                ([&]() {
      |                ~~~~~~~~
  395 |                  std::vector<decltype((
      |                  ~~~~~~~~~~~~~~~~~~~~~~
  396 |                      std::declval<__struct6>().l.l_extendedprice *
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  397 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  398 |                      __items;
      |                      ~~~~~~~~
  399 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  400 |                    __items.push_back(
      |                    ~~~~~~~~~~~~~~~~~~
  401 |                        (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  402 |                  }
      |                  ~
  403 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  404 |                })())),
      |                ~~~~~~~
  405 |            __struct8{g.key.c_custkey, g.key.c_name, ([&](auto v) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  406 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  407 |                      })(([&]() {
      |                      ~~~~~~~~~~~
  408 |                        std::vector<decltype((
      |                        ~~~~~~~~~~~~~~~~~~~~~~
  409 |                            std::declval<__struct6>().l.l_extendedprice *
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  410 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  411 |                            __items;
      |                            ~~~~~~~~
  412 |                        for (auto x : g.items) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  413 |                          __items.push_back(
      |                          ~~~~~~~~~~~~~~~~~~
  414 |                              (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  415 |                        }
      |                        ~
  416 |                        return __items;
      |                        ~~~~~~~~~~~~~~~
  417 |                      })()),
      |                      ~~~~~~
  418 |                      g.key.c_acctbal, g.key.n_name, g.key.c_address,
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  419 |                      g.key.c_phone, g.key.c_comment}});
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  420 |     }
      |     ~
  421 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  422 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  423 |     std::vector<__struct8> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  424 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  425 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  426 |     return __res;
      |     ~~~~~~~~~~~~~
  427 |   })();
      |   ~~^~
