tests/dataset/tpc-h/compiler/cpp/q10.cpp
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
#include <algorithm>
#include <any>
#include <iostream>
#include <map>
#include <numeric>
#include <string>
#include <unordered_map>
#include <utility>
#include <vector>

template <typename T> void __json(const T &);
inline void __json(int v) { std::cout << v; }
inline void __json(double v) { std::cout << v; }
inline void __json(bool v) { std::cout << (v ? "true" : "false"); }
inline void __json(const std::string &v) { std::cout << "\"" << v << "\""; }
inline void __json(const char *v) { std::cout << "\"" << v << "\""; }
template <typename T> void __json(const std::vector<T> &v) {
  std::cout << "[";
  bool first = true;
  for (const auto &x : v) {
    if (!first)
      std::cout << ", ";
    first = false;
    __json(x);
  }
  std::cout << "]";
}
template <typename K, typename V> void __json(const std::map<K, V> &m) {
  std::cout << "{";
  bool first = true;
  for (const auto &kv : m) {
    if (!first)
      std::cout << ",";
    first = false;
    __json(kv.first);
    std::cout << ":";
    __json(kv.second);
  }
  std::cout << "}";
}
template <typename K, typename V>
void __json(const std::unordered_map<K, V> &m) {
  std::cout << "{";
  bool first = true;
  for (const auto &kv : m) {
    if (!first)
      std::cout << ",";
    first = false;
    __json(kv.first);
    std::cout << ":";
    __json(kv.second);
  }
  std::cout << "}";
}

inline bool __any_eq(const std::any &a, const std::any &b) {
  if (a.type() != b.type())
    return false;
  if (a.type() == typeid(int))
    return std::any_cast<int>(a) == std::any_cast<int>(b);
  if (a.type() == typeid(double))
    return std::any_cast<double>(a) == std::any_cast<double>(b);
  if (a.type() == typeid(bool))
    return std::any_cast<bool>(a) == std::any_cast<bool>(b);
  if (a.type() == typeid(std::string))
    return std::any_cast<std::string>(a) == std::any_cast<std::string>(b);
  return false;
}
inline void __print_any(const std::any &a) {
  if (a.type() == typeid(int))
    std::cout << std::any_cast<int>(a);
  else if (a.type() == typeid(double))
    std::cout << std::any_cast<double>(a);
  else if (a.type() == typeid(bool))
    std::cout << (std::any_cast<bool>(a) ? "true" : "false");
  else if (a.type() == typeid(std::string))
    std::cout << std::any_cast<std::string>(a);
}

struct Nation {
  int n_nationkey;
  std::string n_name;
};
struct Customer {
  int c_custkey;
  std::string c_name;
  int c_acctbal;
  int c_nationkey;
  std::string c_address;
  std::string c_phone;
  std::string c_comment;
};
struct Order {
  int o_orderkey;
  int o_custkey;
  std::string o_orderdate;
};
struct Lineitem {
  int l_orderkey;
  std::string l_returnflag;
  int l_extendedprice;
  std::any l_discount;
};
struct Result {
  std::any c_custkey;
  std::any c_name;
  std::any c_acctbal;
  std::any c_address;
  std::any c_phone;
  std::any c_comment;
  std::any n_name;
};
struct __struct6 {
  Customer c;
  Order o;
  Lineitem l;
  Nation n;
};
struct __struct7 {
  Result key;
  std::vector<__struct6> items;
};
struct __struct8 {
  std::any c_custkey;
  std::any c_name;
  double revenue;
  std::any c_acctbal;
  std::any n_name;
  std::any c_address;
  std::any c_phone;
  std::any c_comment;
};
inline void __json(const Result &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_custkey\":";
  __json(v.c_custkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_name\":";
  __json(v.c_name);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_acctbal\":";
  __json(v.c_acctbal);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_address\":";
  __json(v.c_address);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_phone\":";
  __json(v.c_phone);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_comment\":";
  __json(v.c_comment);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"n_name\":";
  __json(v.n_name);
  std::cout << "}";
}
inline void __json(const Customer &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_custkey\":";
  __json(v.c_custkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_name\":";
  __json(v.c_name);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_acctbal\":";
  __json(v.c_acctbal);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_nationkey\":";
  __json(v.c_nationkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_address\":";
  __json(v.c_address);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_phone\":";
  __json(v.c_phone);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_comment\":";
  __json(v.c_comment);
  std::cout << "}";
}
inline void __json(const __struct8 &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_custkey\":";
  __json(v.c_custkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_name\":";
  __json(v.c_name);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"revenue\":";
  __json(v.revenue);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_acctbal\":";
  __json(v.c_acctbal);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"n_name\":";
  __json(v.n_name);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_address\":";
  __json(v.c_address);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_phone\":";
  __json(v.c_phone);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_comment\":";
  __json(v.c_comment);
  std::cout << "}";
}
inline void __json(const Lineitem &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_orderkey\":";
  __json(v.l_orderkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_returnflag\":";
  __json(v.l_returnflag);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_extendedprice\":";
  __json(v.l_extendedprice);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_discount\":";
  __json(v.l_discount);
  std::cout << "}";
}
inline void __json(const Nation &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"n_nationkey\":";
  __json(v.n_nationkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"n_name\":";
  __json(v.n_name);
  std::cout << "}";
}
inline void __json(const Order &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o_orderkey\":";
  __json(v.o_orderkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o_custkey\":";
  __json(v.o_custkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o_orderdate\":";
  __json(v.o_orderdate);
  std::cout << "}";
}
inline void __json(const __struct6 &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c\":";
  __json(v.c);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o\":";
  __json(v.o);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l\":";
  __json(v.l);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"n\":";
  __json(v.n);
  std::cout << "}";
}
int main() {
  std::vector<Nation> nation = {Nation{1, std::string("BRAZIL")}};
  std::vector<Customer> customer = {
      Customer{1, std::string("Alice"), 100, 1, std::string("123 St"),
               std::string("123-456"), std::string("Loyal")}};
  std::vector<Order> orders = {Order{1000, 1, std::string("1993-10-15")},
                               Order{2000, 1, std::string("1994-01-02")}};
  std::vector<Lineitem> lineitem = {Lineitem{1000, std::string("R"), 1000, 0.1},
                                    Lineitem{2000, std::string("N"), 500, 0}};
  auto start_date = std::string("1993-10-01");
  auto end_date = std::string("1994-01-01");
  std::vector<__struct6> result = ([&]() {
    std::vector<__struct7> __groups;
    for (auto c : customer) {
      for (auto o : orders) {
        if (!((o.o_custkey == c.c_custkey)))
          continue;
        for (auto l : lineitem) {
          if (!((l.l_orderkey == o.o_orderkey)))
            continue;
          for (auto n : nation) {
            if (!((n.n_nationkey == c.c_nationkey)))
              continue;
            if (!((((o.o_orderdate >= start_date) &&
                    (o.o_orderdate < end_date)) &&
                   (l.l_returnflag == std::string("R")))))
              continue;
            auto __key =
                Result{c.c_custkey, c.c_name,    c.c_acctbal, c.c_address,
                       c.c_phone,   c.c_comment, n.n_name};
            bool __found = false;
            for (auto &__g : __groups) {
              if (__g.key == __key) {
                __g.items.push_back(__struct6{c, o, l, n});
                __found = true;
                break;
              }
            }
            if (!__found) {
              __groups.push_back(__struct7{
                  __key, std::vector<__struct6>{__struct6{c, o, l, n}}});
            }
          }
        }
      }
    }
    std::vector<std::pair<double, __struct8>> __items;
    for (auto &g : __groups) {
      __items.push_back(
          {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
               ([&]() {
                 std::vector<decltype((
                     std::declval<__struct6>().l.l_extendedprice *
                     ((1 - std::declval<__struct6>().l.l_discount))))>
                     __items;
                 for (auto x : g.items) {
                   __items.push_back(
                       (x.l.l_extendedprice * ((1 - x.l.l_discount))));
                 }
                 return __items;
               })())),
           __struct8{g.key.c_custkey, g.key.c_name, ([&](auto v) {
                       return std::accumulate(v.begin(), v.end(), 0.0);
                     })(([&]() {
                       std::vector<decltype((
                           std::declval<__struct6>().l.l_extendedprice *
                           ((1 - std::declval<__struct6>().l.l_discount))))>
                           __items;
                       for (auto x : g.items) {
                         __items.push_back(
                             (x.l.l_extendedprice * ((1 - x.l.l_discount))));
                       }
                       return __items;
                     })()),
                     g.key.c_acctbal, g.key.n_name, g.key.c_address,
                     g.key.c_phone, g.key.c_comment}});
    }
    std::sort(__items.begin(), __items.end(),
              [](auto &a, auto &b) { return a.first < b.first; });
    std::vector<__struct8> __res;
    for (auto &p : __items)
      __res.push_back(p.second);
    return __res;
  })();
  (__json(result));
  // test Q10 returns customer revenue from returned items
  return 0;
}
